--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"> </script>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="f6_outer span12">
+      </div>
+    </div>
   </body>
   <script src="/bundle.js"></script>
 </html>
