--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="/style/style.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://unpkg.com/react-select/dist/react-select.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"> </script>
   </head>
   <body>
